feat: footer text added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <div class="footer">
-        <p>About: <br/> </p>
+        <p>About: <br/> What can make a book nerd happier than seeing their sentences being translated by Shakespeare himself? Use the translator to convert your text from Modern English to Shakespearean English.</p>
     </div>
     <script src="/app.js" type="text/javascript"></script>
 </body>
