--- a/index.html
+++ b/index.html
@@ -8,23 +8,24 @@
     <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
-    <div class="header">
+    <div class="container container-center">
+        <div class="header">
         <h1>Shakespeare Speaks!</h1>
-    </div>
-    <div class="input-area">
-        <textarea id="text-input" placeholder="Put your sentence in English here and Shakespeare will translate it into the English language of his times!!"></textarea>
-        <div class="wrapper">
-            <button id="btn-translate">Translate to Shakespearean!</button>
-
         </div>
-    </div>
-    <div class="output-area">
-        <div style="font-size:larger;" id="text">Shakespearean Translation Cometh Hither !! 👇</div>
-        <div id="output"></div>
-    </div>
+        <div class="input-area">
+            <textarea id="text-input" placeholder="Put your sentence in English here and Shakespeare will translate it into the English language of his times!!"></textarea>
+            <div class="wrapper">
+                <button id="btn-translate">Translate to Shakespearean!</button>
+             </div>
+        </div>
+        <div class="output-area">
+            <div style="font-size:larger;" id="text">Shakespearean Translation Cometh Hither !! 👇</div>
+            <div id="output"></div>
+        </div>
 
-    <div class="footer">
-        <p>About: <br/> What can make a book nerd happier than seeing their sentences being translated by Shakespeare himself? Use the translator to convert your text from Modern English to Shakespearean English.</p>
+        <div class="footer">
+            <p>About: <br/> What can make a book nerd happier than seeing their sentences being translated by Shakespeare himself? Use the translator to convert your text from Modern English to Shakespearean English.</p>
+        </div>
     </div>
     <script src="/app.js" type="text/javascript"></script>
 </body>
